Perfil de usuario

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -30,6 +30,13 @@
     display:inline-block; 
 }
 
+.tablaentradas{
+    max-height: 250px;
+    width: 100%;
+    overflow: auto;
+    display:inline-block; 
+}
+
 body{
     background-color: #92bcea;
 }
