--- a/src/main/resources/templates/cines.html
+++ b/src/main/resources/templates/cines.html
@@ -59,9 +59,9 @@
                     2i768!4f13.1!3m3!1m2!1s0xd4224dc15dad579%3A0xcbf9370ac84ce0db!2sCC%20La%20Gavia!5e0!3m2!1ses!2ses!4v1645031698047!5m2!1ses!2ses" 
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="mt-5"></iframe>
                     <div class="info mt-5 ms-5">
-                        <p>Dirección: C/Adolfo Bioy Casares, 2, 28051 Madrid</p>
-                        <p>Horario: 10:00 - 22:00</p>
-                        <p>Teléfono: 914255401</p>
+                        <p><span class="bold">Dirección:</span> C/Adolfo Bioy Casares, 2, 28051 Madrid</p>
+                        <p><span class="bold">Horario:</span> 10:00 - 22:00</p>
+                        <p><span class="bold">Teléfono:</span> 914255401</p>
                         <div id="carouselExampleControls" class="carousel slide mt-5" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
