Chat atención al cliente terminado

--- a/src/main/resources/templates/atencionCliente.html
+++ b/src/main/resources/templates/atencionCliente.html
@@ -21,10 +21,17 @@
                 </div>
                 <div class="tab-content" id="v-pills-tabContent">
                   <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                    <div class="d-flex align-items-center top-chat">
+                      <span class="p-1 bold ms-auto">Chat con Cliente 1</span>
+                      <button type="button" class="btn-close btn-close-white ms-auto me-2" aria-label="Close"></button>
+                    </div>
                     <div class="mensajes mb-3">
-                      <div class="mb-2"><span class="bold">user:</span> hola buenas quería saber el horario del cine plaza rio 2</div>
+                      <div class="mb-2"><span class="bold">user:</span> hola buenas quería saber el horario del cine plaza rio 2 </div>
                       <div class="mb-2"><span class="bold">Filmadmin:</span> El horario es de 10:00 a 22:00 todos los días de la semana</div>
                       <div class="mb-2"><span class="bold">user:</span> perfecto, muchas gracias</div>
+                      <div class="mb-2"><span class="bold">Filmadmin:</span> ¿Desea algo más?</div>
+                      <div class="mb-2"><span class="bold">user:</span> el centro comercial cuenta con parking?</div>
+                      <div class="mb-2"><span class="bold">Filmadmin:</span> Así es. Funciona en el mismo horario que el resto de servicios.</div>
                     </div>
                     <form class="d-flex flex-column">
                       <textarea></textarea>
