--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -51,7 +51,7 @@ a:link, a:visited, a:active {
 }
 
 .mensajes{
-    max-height: 100px;
+    max-height: 300px;
     background-color: #7a93ac;
     border-radius: 2%;
     padding: 2%;
@@ -62,4 +62,27 @@ a:link, a:visited, a:active {
 .mensajes::-webkit-scrollbar{
     width: 8px;
     background-color: #F5F5F5;
+}
+
+.mensajes::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 6px rgba(104, 140, 240, 0.3);
+}
+
+.mensajes::-webkit-scrollbar-thumb{
+    background-color: lightblue;
+    outline: 1px solid slategrey;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link{
+    color: white!important;
+    background-color: #212529!important;
+}
+
+.nav-link{
+    color: black;
+}
+
+.top-chat{
+    background-color: #617073;
+    border-radius: 2%;
 }
