Página de administración

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -30,6 +30,10 @@
     display:inline-block; 
 }
 
+.tablaadmin{
+    min-height: 550px;
+}
+
 .tablaentradas{
     max-height: 250px;
     width: 100%;
