--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,19 +3,208 @@
 
 <head>
     <th:block th:replace="fragments/head :: header" />
-    <title>IW: Admin</title>
+    <title>FilmAdmin</title>
 </head>
 
 <body class="d-flex flex-column h-100">
+
     <header th:replace="fragments/nav.html :: nav"></header>
 
     <main class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">Administración</h1>
+            <h1 class="mt-5">Panel de Administración</h1>
+            <div class="container">
+                <div class="row mt-5 mb-5">
+                  <div class="col-3">
+                    <div class="d-flex justify-content-center"><h2>Usuarios</h2></div>
+                    <div class="table-responsive tabla tablaadmin mt-3">
+                        <table class="table align-middle">
+                            <thead></thead>
+                            <tbody>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/user/1}"><img
+                                                th:src="@{/img/default-pic.jpg}" src="/img/default-pic.jpg" alt="imagen usuario"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/user/1}" class="text-dark bold">a</a></td>
+                                    <td>admin</td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/user/2}"><img
+                                                th:src="@{/img/default-pic.jpg}" src="/img/default-pic.jpg" alt="imagen usuario"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/user/2}" class="text-dark bold">b</a></td>
+                                    <td>user</td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>    
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="d-flex justify-content-center"><button type="button" class="btn btn-dark mt-3">Añadir usuario</button></div>
+                  </div>
+                  <div class="col-3">
+                    <div class="d-flex justify-content-center"><h2>Películas</h2></div>
+                    <div class="table-responsive tabla tablaadmin mt-3">
+                        <table class="table align-middle">
+                            <thead></thead>
+                            <tbody>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/peliculas/1}"><img
+                                                th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen pelicula"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/peliculas/1}" class="text-dark bold">El buen patrón</a></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/peliculas/2}"><img
+                                                th:src="@{/img/Delicioso-886756010-mmed.jpg}" src="/img/Delicioso-886756010-mmed.jpg" alt="imagen pelicula"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/peliculas/2}" class="text-dark bold">Delicioso</a></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/peliculas/3}"><img
+                                                th:src="@{/img/Belfast-622346571-large.jpg}" src="/img/Belfast-622346571-large.jpg" alt="imagen pelicula"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/peliculas/3}" class="text-dark bold">Belfast</a></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/peliculas/4}"><img
+                                                th:src="@{/img/Encanto-153413687-large.jpg}" src="/img/Encanto-153413687-large.jpg" alt="imagen pelicula"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/peliculas/4}" class="text-dark bold">Encanto</a></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/peliculas/5}"><img
+                                                th:src="@{/img/Moonfall-138176660-large.jpg}" src="/img/Moonfall-138176660-large.jpg" alt="imagen pelicula"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/peliculas/5}" class="text-dark bold">Moonfall</a></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>      
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="d-flex justify-content-center"><button type="button" class="btn btn-dark mt-3">Añadir película</button></div>
+                  </div>
+                  <div class="col-3">
+                    <div class="d-flex justify-content-center"><h2>Cines</h2></div>
+                    <div class="table-responsive tabla tablaadmin mt-3">
+                        <table class="table align-middle">
+                            <thead></thead>
+                            <tbody>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/cines/la-gavia}"><img
+                                                th:src="@{/img/lagavia.jpg}" src="/img/lagavia.jpg" alt="imagen cine"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/cines/la-gavia}" class="text-dark bold">La Gavia</a></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/cines/plaza-rio-2}"><img
+                                                th:src="@{/img/plazario2.jpg}" src="/img/plazario2.jpg" alt="imagen cine"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/cines/plaza-rio-2}" class="text-dark bold">Plaza Rio 2</a></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/cines/barnasud}"><img
+                                                th:src="@{/img/barnasud.jpg}" src="/img/barnasud.jpg" alt="imagen cine"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/cines/barnasud}" class="text-dark bold">Barnasud</a></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/cines/diagonal}"><img
+                                                th:src="@{/img/diagonal.png}" src="/img/diagonal.png" alt="imagen cine"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/cines/diagonal}" class="text-dark bold">Diagonal</a></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/cines/bonaire}"><img
+                                                th:src="@{/img/bonaire.jpg}" src="/img/bonaire.jpg" alt="imagen cine"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td><a th:href="@{/cines/bonaire}" class="text-dark bold">Bonaire</a></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>   
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="d-flex justify-content-center"><button type="button" class="btn btn-dark mt-3">Añadir cine</button></div>
+                  </div>
+                  <div class="col-3">
+                    <div class="d-flex justify-content-center">
+                        <h2>Sesiones</h2>
+                    </div>
+                    <div class="table-responsive tabla tablaadmin mt-3">
+                        <table class="table align-middle">
+                            <thead></thead>
+                            <tbody>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/peliculas/1}"><img
+                                                th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen pelicula"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td>21:00</td>
+                                    <td><a th:href="@{/peliculas/1}" class="text-dark bold">El buen patrón</a></td>
+                                    <td>La Gavia</td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/peliculas/2}"><img
+                                                th:src="@{/img/Delicioso-886756010-mmed.jpg}" src="/img/Delicioso-886756010-mmed.jpg" alt="imagen pelicula"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td>18:00</td>
+                                    <td><a th:href="@{/peliculas/2}" class="text-dark bold">Delicioso</a></td>
+                                    <td>Plaza Río 2</td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/peliculas/3}"><img
+                                                th:src="@{/img/Belfast-622346571-large.jpg}" src="/img/Belfast-622346571-large.jpg" alt="imagen pelicula"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td>14:00</td>
+                                    <td><a th:href="@{/peliculas/3}" class="text-dark bold">Belfast</a></td>
+                                    <td>La Gavia</td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>
+                                <tr>
+                                    <td class="d-flex align-items-center"><a th:href="@{/peliculas/5}"><img
+                                                th:src="@{/img/Moonfall-138176660-large.jpg}" src="/img/Moonfall-138176660-large.jpg" alt="imagen pelicula"
+                                                height="120px" width="84px" class="d-inline-block"></a></td>
+                                    <td>22:00</td>
+                                    <td><a th:href="@{/peliculas/5}" class="text-dark bold">Moonfall</a></td>
+                                    <td>Diagonal</td>
+                                    <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
+                                    <td><button type="button" class="btn btn-danger btn-sm">Eliminar</button></td>
+                                </tr>      
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="d-flex justify-content-center"><button type="button" class="btn btn-dark mt-3">Añadir sesión</button></div>
+                </div>
+            </div>
         </div>
     </main>
 
     <th:block th:replace="fragments/footer.html :: footer" />
+
 </body>
 
 </html>
