Compra entradas (falta selección asientos)

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -98,3 +98,15 @@ a:link, a:visited, a:active {
 .chat-selector{
     width: 120%;
 }
+
+.botoncantidad{
+    width: 36px;
+}
+
+.inputcantidad{
+    width: 45px;
+}
+
+#inputpromociones{
+    width: 130%;
+}
