--- a/src/main/resources/templates/peliculas.html
+++ b/src/main/resources/templates/peliculas.html
@@ -41,7 +41,7 @@
                                 <td><a th:href="@{/peliculas/1}" class="text-dark bold">El buen patrón</a></td>
                                 <td>120 min</td>
                                 <td>Comedia</td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-3">12:00</button>
+                                <td><a th:href="@{/compra-entradas}"><button type="button" class="btn btn-dark btn-sm ms-3">12:00</button></a>
                                     <p class="mt-2">10 butacas</p>
                                 </td>
                                 <td><button type="button" class="btn btn-dark btn-sm ms-2">15:00</button>
