--- a/src/main/resources/templates/compraEntradas.html
+++ b/src/main/resources/templates/compraEntradas.html
@@ -11,7 +11,37 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">Compra de entradas</h1>
+            <form action="/compra-entradas">
+                <h1 class="mt-5">El buen patrón - Sesión de las 21:00</h1>
+                <div class="d-flex mt-5">
+                    <div class="d-flex flex-column">
+                        <select class="form-select mb-4" aria-label="Seleccion de Cine">
+                            <option selected>Seleccione un cine</option>
+                            <option value="1">Madrid - La Gavia</option>
+                            <option value="2">Madrid - Plaza Rio 2</option>
+                            <option value="3">Barcelona - Barnasud</option>
+                            <option value="4">Barcelona - Diagonal</option>
+                            <option value="5">Valencia - Bonaire</option>
+                        </select>
+                        <h6 class="mb-3">Precio entrada: 11,50€</h6>
+                        <div class="d-flex mb-4">
+                            <button type="button" class="btn btn-dark botoncantidad me-2">+</button>
+                            <button type="button" class="btn btn-dark botoncantidad me-2">-</button>
+                            <input class="form-control inputcantidad" type="text" value="10"
+                                aria-label="readonly input example" readonly>
+                        </div>
+                        <input type="text" class="form-control mb-4" id="inputpromociones"
+                            placeholder="Códigos y cupones promocionales">
+                        <h6 class="">Subtotal: 115,00€</h6>
+                        <h6 class="">Descuentos: -0,00€</h6>
+                        <h5 class="bold">Precio final: 115,00€</h5>
+                    </div>
+                    <div class="d-flex flex-column">
+
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center"> <button type="submit" class="btn btn-dark mt-3">Comprar</button> </div>
+            </form>
         </div>
     </main>
 
